google tag added

--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,16 @@
     -->
     <title>By IITians - BI</title>
   </head>
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16881296214"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'AW-16881296214'); // Replace with your Google Ads ID
+  </script>
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
